--- a/Pizza/Pizza.csproj
+++ b/Pizza/Pizza.csproj
@@ -115,9 +115,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Clientes.aspx" />
     <Content Include="default.aspx" />
-    <Content Include="Empleados.aspx" />
     <Content Include="Global.asax" />
     <Content Include="Images\mr-pizza.svg" />
     <Content Include="Index.aspx" />
@@ -126,13 +124,7 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Clientes.aspx.cs">
-      <DependentUpon>Clientes.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="Clientes.aspx.designer.cs">
-      <DependentUpon>Clientes.aspx</DependentUpon>
-    </Compile>
+    <Compile Include="Dal\ClientesDal.cs" />
     <Compile Include="Dal\EmpleadosDal.cs" />
     <Compile Include="default.aspx.cs">
       <DependentUpon>default.aspx</DependentUpon>
@@ -146,13 +138,6 @@
     <Compile Include="Ef\Model1.cs" />
     <Compile Include="Ef\Ordenes.cs" />
     <Compile Include="Ef\Pizzas.cs" />
-    <Compile Include="Empleados.aspx.cs">
-      <DependentUpon>Empleados.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="Empleados.aspx.designer.cs">
-      <DependentUpon>Empleados.aspx</DependentUpon>
-    </Compile>
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -178,7 +163,22 @@
       <DependentUpon>IngresoOrden.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ServiceDal\ClientesServicio.cs" />
     <Compile Include="ServiceDal\EmpleadosServicio.cs" />
+    <Compile Include="WebClientes.aspx.cs">
+      <DependentUpon>WebClientes.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="WebClientes.aspx.designer.cs">
+      <DependentUpon>WebClientes.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="WebEmpleados.aspx.cs">
+      <DependentUpon>WebEmpleados.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="WebEmpleados.aspx.designer.cs">
+      <DependentUpon>WebEmpleados.aspx</DependentUpon>
+    </Compile>
     <Compile Include="WebPizza.Master.cs">
       <DependentUpon>WebPizza.Master</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -195,6 +195,8 @@
     <None Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
+    <Content Include="WebClientes.aspx" />
+    <Content Include="WebEmpleados.aspx" />
     <Content Include="WebPizza.Master" />
   </ItemGroup>
   <ItemGroup>
