--- a/Pizza/Web.config
+++ b/Pizza/Web.config
@@ -31,5 +31,6 @@
   <connectionStrings>
     <add name="Model1" connectionString="data source=localhost;initial catalog=Pizza;persist security info=True;user id=sa;password=Inicio2019.;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
     <add name="Model11" connectionString="data source=localhost;initial catalog=Pizza;persist security info=True;user id=sa;password=Inicio2019.;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="Model12" connectionString="data source=localhost;initial catalog=Pizza;persist security info=True;user id=sa;password=Inicio2019.;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
