--- a/Pizza/Pizza.csproj
+++ b/Pizza/Pizza.csproj
@@ -127,6 +127,7 @@
   <ItemGroup>
     <Compile Include="Dal\ClientesDal.cs" />
     <Compile Include="Dal\EmpleadosDal.cs" />
+    <Compile Include="Dal\OrdenesDal.cs" />
     <Compile Include="Dal\PizzasDal.cs" />
     <Compile Include="default.aspx.cs">
       <DependentUpon>default.aspx</DependentUpon>
@@ -167,6 +168,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServiceDal\ClientesServicio.cs" />
     <Compile Include="ServiceDal\EmpleadosServicio.cs" />
+    <Compile Include="ServiceDal\OrdenesServicio.cs" />
     <Compile Include="ServiceDal\PizzasServicio.cs" />
     <Compile Include="WebClientes.aspx.cs">
       <DependentUpon>WebClientes.aspx</DependentUpon>
