--- a/Pizza/packages.config
+++ b/Pizza/packages.config
@@ -8,6 +8,7 @@
   <package id="Carbon.Versioning" version="1.5.0" targetFramework="net472" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net472" />
   <package id="GitHub" version="1.14.1" targetFramework="net472" />
+  <package id="iTextSharp" version="5.5.13.1" targetFramework="net472" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.4.0" targetFramework="net472" />
   <package id="System.Memory" version="4.5.3" targetFramework="net472" />
